--- a/old-index.html
+++ b/old-index.html
@@ -1,4 +1,6 @@
-<html>
+
+
+<!-- <html>
 <head>
 <title>The Markov-chain Monte Carlo Interactive Gallery</title>
 <style>
@@ -37,4 +39,4 @@ li { margin-bottom: 0.5em; }
 <p id="ref-6">[6] J. Buchner <a target="_blank" href="https://arxiv.org/abs/1407.5459"> A statistical test for Nested Sampling algorithms</a> Statistics and Computing. 2014.</p>
 <p id="ref-7">[7] Cajo J. F. ter Braak & Jasper A. Vrugt <a target="_blank" href="https://link.springer.com/article/10.1007/s11222-008-9104-9">Differential Evolution Markov Chain with snooker updater and fewer chains</a> Statistics and Computing. 2008.</p>
 </div>
-</body>
+</body> -->
