--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!-- This is v1 -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -112,6 +113,5 @@
     <!-- <script src="algorithms/H2MC.js"></script> -->
     <!-- <script src="algorithms/GibbsSampling.js"></script> -->
     <!-- <script src="algorithms/SVGD.js"></script> -->
-    <!-- <script src="algorithms/NSRadFriends.js"></script> -->
   </body>
 </html>
