--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
     <script src="main/MCMC.js"></script>
     <script src="main/Simulation.js"></script>
     <script src="main/Visualizer.js"></script>
-    <script src="algorithms/HaRAM.js"></script>
-    <script src="algorithms/HamiltonianMC.js"></script>
     <script src="algorithms/RandomWalkMH.js"></script>
+    <script src="algorithms/HamiltonianMC.js"></script>
+    <script src="algorithms/HaRAM.js"></script>
     <script src="algorithms/MALA.js"></script>
-    <script src="algorithms/NaiveNUTS.js"></script>
+    <!-- <script src="algorithms/NaiveNUTS.js"></script> -->
     <!-- <script src="algorithms/DE-MCMC-Z.js"></script> -->
     <!-- <script src="algorithms/AdaptiveMH.js"></script> -->
     <!-- <script src="algorithms/EfficientNUTS.js"></script> -->
@@ -113,5 +113,6 @@
     <!-- <script src="algorithms/H2MC.js"></script> -->
     <!-- <script src="algorithms/GibbsSampling.js"></script> -->
     <!-- <script src="algorithms/SVGD.js"></script> -->
+    <br>
   </body>
 </html>
