--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     <script src="main/MCMC.js"></script>
     <script src="main/Simulation.js"></script>
     <script src="main/Visualizer.js"></script>
+    <script src="algorithms/HaRAM.js"></script>
     <script src="algorithms/RandomWalkMH.js"></script>
     <script src="algorithms/HamiltonianMC.js"></script>
-    <script src="algorithms/HaRAM.js"></script>
     <script src="algorithms/MALA.js"></script>
     <!-- <script src="algorithms/NaiveNUTS.js"></script> -->
     <!-- <script src="algorithms/DE-MCMC-Z.js"></script> -->
@@ -115,4 +115,18 @@
     <!-- <script src="algorithms/SVGD.js"></script> -->
     <br>
   </body>
+<head>
+  <style type="text/css">
+    .footer {
+      position: fixed;
+      text-align: right;
+      bottom: 5px;
+      width: 100%;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="footer">Adapted using the <a href="https://github.com/chi-feng/mcmc-demo/">interactive gallery by Chi Feng</a></div>
+</body>
 </html>
