--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   </style>
 </head>
 
-<body>
+<!-- <body>
   <div class="footer">Adapted using the <a href="https://github.com/chi-feng/mcmc-demo/">interactive gallery by Chi Feng</a></div>
-</body>
+</body> -->
 </html>
