--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <script src="main/MCMC.js"></script>
     <script src="main/Simulation.js"></script>
     <script src="main/Visualizer.js"></script>
-    <script src="algorithms/HaRAM.js"></script>
+    <script src="algorithms/RAHMC.js"></script>
     <script src="algorithms/RandomWalkMH.js"></script>
     <script src="algorithms/HamiltonianMC.js"></script>
     <script src="algorithms/MALA.js"></script>
